# SkillsNode

./: .gitignore  CMakeLists.txt  todo.md
misc/cmake-modules/: Findimgui_node_editor.cmake
skills/: CMakeLists.txt  nodes.cpp  nodes.h  register.cpp  save.cpp  skills.cpp  skills.h
skills/application/: CMakeLists.txt
skills/application/include/: application.h
skills/utilities/: drawing.cpp  drawing.h
